// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Utils buttonFrom passes any custom overrides 1`] = `
<Button
  foo="bar"
  type="submit"
>
  <span>
    button content
  </span>
</Button>
`;

exports[`Button Utils buttonFrom renders correctly 1`] = `
<Button
  disabled={false}
>
  <span>
    button content
  </span>
</Button>
`;

exports[`Button Utils buttonsFrom renders correctly 1`] = `
<Button.Group>
  <Button
    action={
      Object {
        "content": <span>
          foo
        </span>,
      }
    }
  >
    <span>
      button 1 content
    </span>
  </Button>
  <Button
    action={Object {}}
  >
    <span>
      button 2 content
    </span>
  </Button>
</Button.Group>
`;
